[package]
name = "p2pchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.22", features = ["event-stream"] }
regex = "1.5"
libp2p = { version = "0.41", features = ["tcp-tokio", "mdns"] }
futures = "0.3"
unicode-width = "0.1"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = { version="1.0" }